Fix footer icons and spacing. Change cursor on buttons.

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,7 @@ nav ul li a {
 
 /* Projects Mobile */
 .projects {
+    border-top: 5px solid white;
     background-color: #062F4F;
     padding: 2%;
 }
@@ -247,6 +248,7 @@ button,
     border-radius: .5rem;
     box-shadow: 1px 1px 5px #FFFFFF;
     color: #FFFFFF;
+    cursor: pointer;
 }
 
 .link {
@@ -312,6 +314,7 @@ p {
 
 /* Contact */
 .form-box {
+    border-top: 5px solid white;
     background-color: #813772;
     padding: 2%;
 
@@ -382,10 +385,10 @@ label {
 /* Footer */
 footer {
     width: 100%;
-    height: 200px;
+    height: 150px;
     background-color: #000000;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 }
 
@@ -407,12 +410,19 @@ footer a {
     color: #00ACEE;
     transition: .4s linear;
 }
+.res {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+
 .resume {
-    font-size: 22px;
+    font-size: 18px;
     font-weight: bold;
 }
-.resume:hover {
+.resume:hover, .res-file:hover {
     color: #813772;
     transition: .4s linear;
-
 }
